--- a/ReCapProject/Core/Core.csproj
+++ b/ReCapProject/Core/Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.3.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.18" />
   </ItemGroup>
 
